buildscript {
  repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://dev.saxonica.com/maven" }
  }

  configurations.all {
    resolutionStrategy {
      force 'xml-apis:xml-apis:1.4.01'
      force "${saxonGroup}:${saxonEdition}:${saxonVersion}"
      force "org.xmlresolver:xmlresolver:${xmlresolverVersion}"
    }
  }

  dependencies {
    classpath group: saxonGroup, name: saxonEdition, version: saxonVersion
    classpath group: 'org.docbook', name: 'schemas-docbook', version: docbookVersion
    classpath group: 'org.docbook', name: 'docbook-xslTNG', version: xslTNGversion
  }
}

plugins {
  id "java-library"
  id "maven-publish"
  id "signing"
  id 'com.github.gmazzo.buildconfig' version "4.1.2"
  id 'com.nwalsh.gradle.saxon.saxon-gradle' version '0.10.5'
  id 'com.nwalsh.gradle.relaxng.validate' version '0.10.3'
  id 'com.nwalsh.gradle.docker.container' version '0.0.5'
}

import com.nwalsh.gradle.saxon.SaxonXsltTask
import com.nwalsh.gradle.relaxng.validate.RelaxNGValidateTask
import com.nwalsh.gradle.docker.DockerContainer
import net.sf.saxon.s9api.Processor
import java.nio.file.Paths
import java.nio.file.Files

repositories {
  mavenLocal()
  mavenCentral()
  maven { url "https://dev.saxonica.com/maven" }
}

configurations.all {
  resolutionStrategy {
    force 'xml-apis:xml-apis:1.4.01'
    force "${saxonGroup}:${saxonEdition}:${saxonVersion}"
    force "org.xmlresolver:xmlresolver:${xmlresolverVersion}"
  }
}

configurations {
  transform.extendsFrom documentation
}

dependencies {
  implementation project(':coffeegrinder')
  implementation project(':coffeefilter')
  implementation (
    [group: 'net.sf.saxon', name: 'Saxon-HE', version: saxonVersion],
  )
  documentation (
    project(':coffeegrinder'),
    project(':coffeefilter'),
    [group: saxonGroup, name: saxonEdition, version: saxonVersion],
    [group: 'org.docbook', name: 'schemas-docbook', version: docbookVersion],
    [group: 'org.docbook', name: 'docbook-xslTNG', version: xslTNGversion],
    [group: 'com.saxonica', name: 'xmldoclet', version: xmldocletVersion],
  )
}

testing {
  suites {
    test {
      useJUnitJupiter('5.9.2')
    }
  }
}

test {
  testLogging {
    outputs.upToDateWhen { false }
    showStandardStreams = true
  }
}

java {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

println("Building with Java version ${System.getProperty('java.version')}")
println("Building with Saxon version ${new Processor(false).getSaxonProductVersion()}")

buildConfig {
  packageName('org.nineml.coffeesacks')
  buildConfigField('String', 'TITLE', "\"${sacksTitle}\"")
  buildConfigField('String', 'VERSION', "\"${ninemlVersion}\"")
}

ext {
  c_coffeesacks = "coffeesacks"
}

docker_container.configure {
  workingDir = "docker"
}

// ============================================================

jar {
  archiveBaseName = "${sacksTitle}-${ninemlVersion}"
  manifest {
    attributes 'Built-By': 'Norman Walsh'
    attributes 'Implementation-Vendor': 'Norman Walsh'
    attributes 'Implementation-Title': sacksTitle
    attributes 'Implementation-Version': ninemlVersion
  }
}

task classlist(
  dependsOn: ["javadoc"]
) {
  inputs.files fileTree(dir: javadoc.destinationDir)
  outputs.file "${buildDir}/classlist.xml"

  def classlist = []
  doLast {
    def out = new PrintStream(new File("${buildDir}/classlist.xml"))
    out.println("<classlist>")
    def plen = "${javadoc.destinationDir}".length() + 1
    def stream = Files.walk(Paths.get("${javadoc.destinationDir}"))
    stream.filter(Files::isRegularFile).forEach(fn -> classlist.add(fn.toString()))
    classlist.forEach { fn ->
      def path = fn.substring(plen)
      if (path.endsWith(".html") && path.startsWith("org/")
          && !path.endsWith("/package-summary.html")
          && !path.endsWith("/package-tree.html")) {
        String className = path.replace("/", ".").replace(".html", "")
        String baseName = className
        int pos = className.lastIndexOf(".")+1
        baseName = className.substring(pos)
        out.println("<class name='${baseName}' fq='${className}' path='${path}'/>")
      }
    }
    out.println("</classlist>")
    out.close()
  }
}

javadoc {
  //inputs.file "${projectDir}/src/main/java/overview.html"
  inputs.files fileTree(dir: "${projectDir}/src/main")

  title 'An Invisible XML Parsing API'
  exclude 'org/nineml/coffeesacks/model/**'
  exclude 'org/nineml/coffeesacks/utils/**'
  exclude 'org/nineml/coffeesacks/BuildConfig.java'
  exclude 'org/nineml/coffeesacks/parser/CommonBuilder.java'
  options.showFromPublic()
  //options.overview = 'src/main/java/overview.html'
  options.encoding('utf-8')
  options.docEncoding('utf-8')
  options.charSet('utf-8')
}

tasks.register('xmljavadoc', Javadoc) {
  classpath = configurations.transform
  source = sourceSets.main.allJava
  destinationDir = file("${buildDir}/xmldoc")
  options.doclet = 'com.saxonica.xmldoclet.XmlDoclet'
  options.docletpath = configurations.documentation.files.asType(List)
  options.addStringOption("sourcepath", "${projectDir}/src/main/java")
}

task dist(dependsOn:["test", "jar", "javadoc"]) {
  doLast {
    mkdir "${buildDir}/stage"
    mkdir "${buildDir}/stage/docs"
  }
  doLast {
    copy {
      from "${buildDir}/libs"
      into "${buildDir}/stage"
    }
  }
  doLast {
    copy {
      from "${buildDir}/docs"
      into "${buildDir}/stage/docs"
    }
  }
  doLast {
    copy {
      from "${projectDir}/README.md"
      into "${buildDir}/stage/docs"
    }
  }
}

task zipDist(type: Zip) {
  from "${buildDir}/stage"
  into "${sacksName}-${ninemlVersion}"
  archiveFileName = "${sacksName}-${ninemlVersion}.zip"
}
dist.finalizedBy zipDist

task javadocJar(type: Jar, dependsOn: javadoc) {
  archiveClassifier = 'javadoc'
  from javadoc.destinationDir
}

task sourcesJar(type: Jar, dependsOn: ['generateBuildConfig']) {
  archiveClassifier = 'sources'
  from sourceSets.main.allSource
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:deprecation'
}

// ============================================================

def pomXml() {
  // Do some surgery on the POM dependencies. Remove Saxon-HE and Saxon-EE whatever,
  // add Saxon-HE with the saxonPomVersionList

  return {
    Node pom = asNode()
    NodeList pomNodes = pom.value()
    Node dependencies = null
    pomNodes.forEach { pomit ->
      if (pomit.name().getNamespaceURI() == 'http://maven.apache.org/POM/4.0.0'
          && pomit.name().getLocalPart() == 'dependencies') {
        dependencies = pomit;
      }
    }

    Iterator iterator = dependencies.iterator()
    while (iterator.hasNext()) {
      Node dep = iterator.next()
      NodeList str = dep.get("artifactId")
      if ("Saxon-HE".equals(str.get(0).value().get(0))
          || "Saxon-EE".equals(str.get(0).value().get(0))) {
        iterator.remove()
      }
    }

    def dependencyNode = dependencies.appendNode('dependency')
    dependencyNode.appendNode('groupId', 'net.sf.saxon')
    dependencyNode.appendNode('artifactId', 'Saxon-HE')
    dependencyNode.appendNode('version', saxonPomVersionList)
    dependencyNode.appendNode('scope', 'runtime')
  }
}

signing {
  sign publishing.publications
}

publishing {
  publications {
    mavenJava(MavenPublication) {
      pom {
        name = sacksTitle
        packaging = 'jar'
        description = 'Saxon extension functions for Invisible XML parsing'
        url = 'https://github.com/nineml/coffeesacks'

        scm {
          url = 'scm:git@github.com:nineml/coffeesacks.git'
          connection = 'scm:git@github.com:nineml/coffeesacks.git'
          developerConnection = 'scm:git@github.com:nineml/coffeesacks.git'
        }

        licenses {
          license {
            name = 'Mozilla Public License Version 2.0'
            url = 'http://www.mozilla.org/MPL/2.0/'
            distribution = 'repo'
          }
        }

        developers {
          developer {
            id = 'ndw'
            name = 'Norman Walsh'
          }
        }

        withXml pomXml()
      }

      groupId = "org.nineml"
      artifactId = sacksName
      version = ninemlVersion
      from components.java
      artifact javadocJar
      artifact sourcesJar
    }
  }

  repositories {
    maven {
      url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
      credentials {
        username = project.findProperty("sonatypeUsername") ?: "NOUSER"
        password = project.findProperty("sonatypePassword") ?: "NOPASS"
      }
    }
  }
}

// ============================================================

task dockerup() {
  doLast {
    if (!DockerContainer.running(c_coffeesacks)) {
      DockerContainer.compose {
        command = "up"
        options = ["-p", "coffeesacks"]
        args = ["-d"]
      }
    }
  }
}

task dockerdown() {
  doLast {
    if (DockerContainer.running(c_coffeesacks)) {
      DockerContainer.compose {
        command = "down"
        options = ["-p", "coffeesacks"]
      }
    }
  }
}

// ============================================================

task helloWorld() {
  doLast {
    println('Hello, world.')
  }
}
